--- a/lab1/Makefile
+++ b/lab1/Makefile
@@ -1,11 +1,14 @@
 CC = g++
-CFLAGS = -Wall -Wextra -Werror
+CFLAGS = -Wall -Wextra
 
 all: BigInt main.cpp
 	$(CC) $(CFLAGS) BigInt.o main.cpp -o main
 
+Run_Tests: BigInt
+	$(CC) BigInt_tests.cpp BigInt.o /usr/local/lib/libgtest.a -lpthread -o BigInt_tests && ./BigInt_tests
+
 BigInt: BigInt.cpp
-	$(CC) $(CFLAGS) -c BigInt.cpp
+	$(CC) -c BigInt.cpp
 
 clean:
 	rm -rf *.o
