--- a/C++/lab1/Makefile
+++ b/C++/lab1/Makefile
@@ -4,7 +4,7 @@ CFLAGS = -Wall -Wextra
 all: BigInt main.cpp
 	$(CC) $(CFLAGS) BigInt.o main.cpp -o main
 
-Run_Tests: BigInt
+run_tests: BigInt
 	$(CC) BigInt_tests.cpp BigInt.o /usr/local/lib/libgtest.a -lpthread -o BigInt_tests && ./BigInt_tests
 
 BigInt: BigInt.cpp
