added static library build

--- a/C++/lab1/Makefile
+++ b/C++/lab1/Makefile
@@ -3,10 +3,14 @@ CFLAGS = -Wall -Wextra
 
 .PHONY: clean_o clean rebuild
 
-all: Bigint clean_o
+all: main clean_o
 
-Bigint: Bigint_build main.cpp
-	$(CC) $(CFLAGS) Bigint_assignment_and_increment_operators.o Bigint_bool_operators.o Bigint_cast_operators.o Bigint_constructors.o Bigint_math_operators.o Bigint_size_operators.o main.cpp -o main
+main: Bigint_lib main.cpp
+	$(CC) $(CFLAGS) main.cpp Bigint.a -o main
+
+Bigint_lib: Bigint_build
+	ar rvs Bigint.a Bigint_assignment_and_increment_operators.o Bigint_bool_operators.o Bigint_cast_operators.o Bigint_constructors.o Bigint_math_operators.o Bigint_size_operators.o
+	make clean_o
 
 Bigint_build: Bigint_assignment_and_increment_operators.cpp Bigint_bool_operators.cpp Bigint_cast_operators.cpp Bigint_constructors.cpp Bigint_math_operators.cpp Bigint_size_operators.cpp
 	$(CC) -c Bigint_assignment_and_increment_operators.cpp Bigint_bool_operators.cpp Bigint_cast_operators.cpp Bigint_constructors.cpp Bigint_math_operators.cpp Bigint_size_operators.cpp
